--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -18,13 +18,94 @@
                 <p>Para que nossos clientes mantenham altos níveis de qualidade, oferecemos serviços de gestão de projetos e análise de negócios com nossa equipe especializada em diversos setores.</p>
             </div> 
         </section>
-        <section>
+        <section class="container">
+            Qualidade e Processos
+            <p>Para que nossos clientes mantenham altos níveis de qualidade, oferecemos serviços de Gestão de Projetos, Análise de Negócios e Gestão de Testes com nossa equipe especializada e com experiência em diversos setores.</p>
+
+        </section>
+        <section class="container background-red">
+            <h2 class="contact-title"> O que oferecemos de melhor?</h2>
+            <p>Soluções suportadas por IoT </p>
+            <div id="qualities">
+                <div>Qualidade de software</div>
+                <img src="./assets/CaretCircleDoubleRight.png" alt="">
+                <div>Prever possíveis erros na aplicação</div>
+                <img src="./assets/CaretCircleDoubleRight.png" alt="">
+                <div>Evitar possíveis riscos</div>
+                <img src="./assets/CaretCircleDoubleRight.png" alt="">
+                <div>Economia do tempo e custo</div>
+                <img src="./assets/CaretCircleDoubleRight.png" alt="">
+            </div>
+        </section>
+        <section class="container">
+            <article class="article-container">
+                <div class="article-details">
+                    <div>
+                        <h2>Gestão de Qualidade e Processos</h2>
+                        <p>Nossa equipe experiente; É composto por gerentes de projetos especializados, com experiência em diversos setores e com certificação PMP®. Estamos aqui para apoiar a gestão dos seus projetos, fortalecer as áreas que você considera fracas e implementar e desenvolver a metodologia PMI® com validade internacional na sua empresa.</p>
+                    </div>
+                    <button>Ver mais</button>
+                </div>
+                <img src="./assets/img1.jpg" alt="">
+            </article>
+            <article class="article-container">
+                <div class="article-details">
+                    <div>
+                        <h2>Gerenciamento e análise de testes</h2>
+                        <p>Para evitar erros de software nos projetos que consultamos, aplicamos cuidadosamente os testes que realizamos em cada etapa do projeto, seja manualmente ou com automação de testes. Nossa experiente equipe de testes oferece às instituições uma experiência de cliente segura, de alta qualidade e satisfatória do início ao fim, com serviços de teste de software de alta qualidade.</p>
+                    </div>
+                    <button>Ver mais</button>
+                </div>
+                <img src="./assets/img2.jpg" alt="">
+            </article>
+
+        </section>
+        <section class="container background-gradient" >
             <div>
-                <h1>Entre em contato</h1>
+                <img src="./assets/user.png" alt="">
+                <h2 class="contact-title">Entre em contato</h2>
                 <p>Contate-nos para obter informações detalhadas sobre nossas soluções, serviços e produtos.</p>
                 <button>enviar mensagem</button>
-            </div> 
         </section>
+        <footer class="container background-red">
+            <section class="footer-list"><ul>
+                <li>Soluções e Serviços</li>
+                <li>Desenvolvimento</li>
+                <li>Tercerização</li>
+                <li>Gestão de Qualidade e Processos</a></li>
+                <li>Consultoria</li>
+                <li>Soluções Suportadas por IoT</li>
+            </ul>
+            <ul>
+                <li>Produtos</li>
+                <li>Sistema de Gestão Educacional</li>
+                <li>Sistema de Gestão de Capital Humano</li>
+                <li>Sistema de Gerenciamento de Conteúdo</a></li>
+                <li>Consultoria</li>
+                <li>Soluções suportadas por IoT</li>
+            </ul>
+            <ul>
+                <li>Institucional</li>
+                <li>Sobre Nós</li>
+                <li>Parceiros</li>
+            </ul>
+            <ul>
+                <li>Comunicação</li>
+                <li>Contato para informações</li>
+                <li>Contato com especializadas</li>
+            </ul>
+        </section>
+        <section class="footer-copyright">
+            <div> © Copyright 2010-2021 - Can Çevik </div>
+            <div>
+                <img src="./assets/MediumLogo.png" alt="">
+                <img src="./assets/LinkedinLogo.png" alt="">
+                <img src="./assets/TwitterLogo.png" alt="">
+                <img src="./assets/InstagramLogo.png" alt="">
+                <img src="./assets/FacebookLogo.png" alt="">
+            </div>    
+            </section>
+        </footer>
     </main>
 </body>
 </html>
