--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,9 +19,40 @@
             </div> 
         </section>
         <section class="container">
-            Qualidade e Processos
+            <h2 class="contact-title">Qualidade e Processos</h2>
             <p>Para que nossos clientes mantenham altos níveis de qualidade, oferecemos serviços de Gestão de Projetos, Análise de Negócios e Gestão de Testes com nossa equipe especializada e com experiência em diversos setores.</p>
-
+            <div class="grid-container">
+                <div class="grid-item">
+                    <img src="./assets/documentos.png" alt="">
+                    <h3>Análise de Documentos</h3>
+                    <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="./assets/estrela.png" alt="">
+                    <h3>Aceitação e Avaliação</h3>
+                    <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="./assets/coroa.png" alt="">
+                    <h3>Regras de Negócios</h3>
+                    <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="./assets/grafico.png" alt="">
+                    <h3>Diagramas de fluxo</h3>
+                    <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="./assets/grafico-pizza.png" alt="">
+                    <h3>Análise de stakeholders</h3>
+                    <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="./assets/prototipo.png" alt="">
+                    <h3>Prototipagem</h3>
+                    <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
+                </div>
+             </div>  
         </section>
         <section class="container background-red">
             <h2 class="contact-title"> O que oferecemos de melhor?</h2>
@@ -42,7 +73,7 @@
                 <div class="article-details">
                     <div>
                         <h2>Gestão de Qualidade e Processos</h2>
-                        <p>Nossa equipe experiente; É composto por gerentes de projetos especializados, com experiência em diversos setores e com certificação PMP®. Estamos aqui para apoiar a gestão dos seus projetos, fortalecer as áreas que você considera fracas e implementar e desenvolver a metodologia PMI® com validade internacional na sua empresa.</p>
+                        <p>Nossa equipe experiente; É composto por gerentes de projetos especializados, com experiência em diversos setores e com certificação PMP®. Estamos aqui para apoiar a gestão dos seus projetos, fortalecer as áreas que você considera fracas e implementar e desenvolver a metodologia PMI® com validade internacional na sua empresa.</p> 
                     </div>
                     <button>Ver mais</button>
                 </div>
@@ -58,7 +89,39 @@
                 </div>
                 <img src="./assets/img2.jpg" alt="">
             </article>
-
+        </section>
+        <section class="container background-grey">
+            <h2 class="contact-title">Nossas referências</h2>
+            <p>Nossos parceiros de negócios que confiam em nós e trabalham juntos</p>
+        <div class="grid-container-companies">
+            <div class="grid-item-companies company-1">
+                <img src="./assets/image 6.png" alt="">
+            </div>
+            <div class="grid-item-companies company-2">
+                <img src="./assets/image 5.png" alt="">
+            </div>
+            <div class="grid-item-companies company-3">
+                <img src="./assets/BookMyShow Logo.png" alt="">
+            </div>
+            <div class="grid-item-companies company-4">
+                <img src="./assets/image 2.png" alt="">
+            </div>
+            <div class="grid-item-companies company-5">
+                <img src="./assets/image 3.png" alt="">
+            </div>
+            <div class="grid-item-companies company-6">
+                <img src="./assets/Frame 4.png" alt="">
+            </div>
+            <div class="grid-item-companies company-7">
+                <img src="./assets/image 4.png" alt="">
+            </div>
+            <div class="grid-item-companies company-8">
+                <img src="./assets/OLA logo.png" alt="">
+            </div>
+            <div class="grid-item-companies company-9">
+                <img src="./assets/Amazon Logo.png" alt="">
+            </div>
+        </div>
         </section>
         <section class="container background-gradient" >
             <div>
